@@ -3,7 +3,6 @@ package no.nav.dolly.bestilling.sigrunstub;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import ma.glasnost.orika.MapperFacade;
-import no.nav.dolly.bestilling.ClientFuture;
 import no.nav.dolly.bestilling.ClientRegister;
 import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubLignetInntektRequest;
 import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubPensjonsgivendeInntektRequest;
@@ -15,10 +14,11 @@ import no.nav.dolly.domain.resultset.RsDollyUtvidetBestilling;
 import no.nav.dolly.domain.resultset.dolly.DollyPerson;
 import no.nav.dolly.errorhandling.ErrorStatusDecoder;
 import no.nav.dolly.mapper.MappingContextUtils;
-import no.nav.dolly.util.TransactionHelperService;
+import no.nav.dolly.service.TransactionHelperService;
 import org.reactivestreams.Publisher;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -38,17 +38,18 @@ public class SigrunStubClient implements ClientRegister {
     private final TransactionHelperService transactionHelperService;
 
     @Override
-    public Flux<ClientFuture> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
+    public Mono<BestillingProgress> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
-        return Flux.from(Flux.merge(
+        return Flux.merge(
                         doLignetInntekt(bestilling, dollyPerson),
                         doPensjonsgivendeInntekt(bestilling, dollyPerson),
                         doSummertSkattegrunnlag(bestilling, dollyPerson))
                 .collect(Collectors.joining(","))
-                .map(resultat -> futurePersist(progress, resultat)));
+                .flatMap(resultat -> oppdaterStatus(progress, resultat));
     }
 
     private Publisher<String> doSummertSkattegrunnlag(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
+
         return Flux.just(bestilling)
                 .filter(bestilling1 -> !bestilling1.getSigrunstubSummertSkattegrunnlag().isEmpty())
                 .map(RsDollyUtvidetBestilling::getSigrunstubSummertSkattegrunnlag)
@@ -69,6 +70,7 @@ public class SigrunStubClient implements ClientRegister {
     }
 
     private Flux<String> doPensjonsgivendeInntekt(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
+
         return Flux.just(bestilling)
                 .filter(bestilling2 -> !bestilling2.getSigrunstubPensjonsgivende().isEmpty())
                 .map(RsDollyUtvidetBestilling::getSigrunstubPensjonsgivende)
@@ -87,6 +89,7 @@ public class SigrunStubClient implements ClientRegister {
     }
 
     private Flux<String> doLignetInntekt(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
+
         return Flux.just(bestilling)
                 .filter(bestilling1 -> !bestilling1.getSigrunstub().isEmpty())
                 .map(RsDollyUtvidetBestilling::getSigrunstub)
@@ -104,12 +107,9 @@ public class SigrunStubClient implements ClientRegister {
                 });
     }
 
-    private ClientFuture futurePersist(BestillingProgress progress, String status) {
+    private Mono<BestillingProgress> oppdaterStatus(BestillingProgress progress, String status) {
 
-        return () -> {
-            transactionHelperService.persister(progress, BestillingProgress::setSigrunstubStatus, status);
-            return progress;
-        };
+        return transactionHelperService.persister(progress, BestillingProgress::setSigrunstubStatus, status);
     }
 
     @Override
@@ -143,10 +143,11 @@ public class SigrunStubClient implements ClientRegister {
 
         return tilbakemeldinger.stream()
                 .allMatch(SigrunstubResponse.OpprettelseTilbakemelding::isOK) ? "OK" :
-                ErrorStatusDecoder.encodeStatus(String.format("Feil: %s",
+                ErrorStatusDecoder.encodeStatus("Feil: %s".formatted(
                         tilbakemeldinger.stream()
                                 .filter(SigrunstubResponse.OpprettelseTilbakemelding::isError)
-                                .map(status -> String.format("Inntektsår: %s, feilmelding: %s", status.getInntektsaar(), status.getMessage()))
+                                .map(status -> "Inntektsår: %s, feilmelding: %s".formatted(
+                                        status.getInntektsaar(), status.getMessage()))
                                 .collect(Collectors.joining(", "))));
     }
 }
